--- a/.foundation/laravel-boilerplate/src/pages/welcome.html
+++ b/.foundation/laravel-boilerplate/src/pages/welcome.html
@@ -2,50 +2,101 @@
 subject: My Welcome Email Template Subject
 ---
 
-<container class="header">
-  <row>
-    <columns>
-      <h1 class="text-center">Welcome to Kraken Academy</h1>
-
-      <center>
-        <menu class="text-center">
-          <item href="#">About</item>
-          <item href="#">Course List</item>
-          <item href="#">Campus Map</item>
-          <item href="#">Contact</item>
-        </menu>
-      </center>
-
-    </columns>
-  </row>
-</container>
+<wrapper class="header">
+    <container>
+        <row class="collapse">
+            <columns small="6">
+                <img src="http://placehold.it/200x50/663399">
+            </columns>
+            <columns small="6">
+                <p class="text-right">Entwurfhaus</p>
+            </columns>
+        </row>
+    </container>
+</wrapper>
 
 <container class="body-border">
-  <row>
-    <columns>
+    <row>
+        <columns>
 
-      <spacer size="32"></spacer>
+            <spacer size="32"></spacer>
 
-      <center>
-        <img src="http://placehold.it/200x200">
-      </center>
+            <h1 class="text-center">Entwurfhaus</h1>
 
-      <spacer size="16"></spacer>
+            <center>
+                <menu class="text-center">
+                    <item href="https://entwurfhaus.com/about">About</item>
+                    <item href="https://entwurfhaus.com/news">News</item>
+                    <item href="https://entwurfhaus.com/services">Services</item>
+                    <item href="https://entwurfhaus.com/contact">Contact</item>
+                </menu>
+            </center>
 
-      <h4>An exciting future of terrorizing sailors awaits you at Kraken Academy.</h4>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque culpa vel architecto, perspiciatis eius cum autem quidem, sunt consequuntur, impedit dolor vitae illum nobis sint nihil aliquid? Assumenda, amet, officia.</p>
+            <spacer size="32"></spacer>
 
-      <center>
-        <menu>
-          <item href="#">krakenacademy.com</item>
-          <item href="#">Facebook</item>
-          <item href="#">Twitter</item>
-          <item href="#">(408)-555-0123</item>
+            <center>
+                <img src="http://placehold.it/600x300">
+            </center>
+
+            <spacer size="16"></spacer>
+
+            <h4 class="text-center">Welcome to Entwurfhaus!</h4>
+            <p>An exciting new digital agency, splurging out code. We will be pumping out new code, mostly open-source
+                components that you'll be able to utilize for your own projects.</p>
+            <p>Stay tuned, for more updates about Entwurfhaus' services and projects.</p>
+
+        </columns>
+    </row>
+
+    <row>
+        <columns large="4">
+            <center>
+                <a href="https://entwurfhaus.com/services" target="_blank">
+                    <img src="http://placehold.it/200x200">
+                </a>
+            </center>
+            <spacer size="16"></spacer>
+            <h5 class="text-center">Open-source</h5>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum, quod quam unde
+                earum.
+            </p>
+        </columns>
+        <columns large="4">
+            <center>
+                <a href="https://entwurfhaus.com/services" target="_blank">
+                    <img src="http://placehold.it/200x200">
+                </a>
+            </center>
+            <spacer size="16"></spacer>
+            <h5 class="text-center">Services</h5>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum, quod quam unde
+                earum.
+            </p>
+        </columns>
+        <columns large="4">
+            <center>
+                <a href="https://docs.brianngchongeu.com" target="_blank">
+                    <img src="http://placehold.it/200x200">
+                </a>
+            </center>
+            <spacer size="16"></spacer>
+            <h5 class="text-center">Documentation</h5>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            </p>
+        </columns>
+    </row>
+
+    <spacer size="16"></spacer>
+
+    <center>
+        <menu class="text-center">
+            <item href="#"><img src="./assets/img/iconmonstr-github-3-24.png" alt="github"/></item>
+            <item href="#"><img src="./assets/img/iconmonstr-linkedin-3-24.png" alt="linkedin"/></item>
+            <item href="#"><img src="./assets/img/iconmonstr-slack-3-24.png" alt="slack"/></item>
+            <item href="#"><img src="./assets/img/iconmonstr-youtube-3-24.png" alt="youtube"/></item>
         </menu>
-      </center>
-
-    </columns>
-  </row>
-
-  <spacer size="16"></spacer>
+    </center>
 </container>
